css: add table style, fix image and line spacing

--- a/assets/screen.scss
+++ b/assets/screen.scss
@@ -39,7 +39,7 @@ body{
 	color: #fff;
 	background: #111;
 	font-family: Helvetica, Arial, Arimo, 'Liberation Sans', sans-serif;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -63,3 +63,16 @@ p {
 .column{ flex: 1 1 0px; }
 
 a { color: inherit; opacity: 0.7; &:hover{opacity: 1;}}
+
+table{
+	border: 1px solid #888;
+	margin: auto;
+	td, th {
+		border: 1px solid #444;
+		padding: 0.3em;
+	}
+}
+
+img {
+	image-rendering: crisp-edges;
+}
